[project]
name = "slack-gemini-bot"
version = "0.1.0"
description = "A Slack chatbot that uses Google's Gemini 2.5 Pro API"
authors = [
    {name = "User", email = "user@example.com"},
]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "flask>=2.3.3",
    "slack-bolt>=1.18.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
# uv-specific configuration

[tool.scripts]
start = "python slack_bot.py"
test = "python test_gemini.py"
demo = "python demo_bot.py"

[tool.setuptools]
py-modules = ["slack_bot"]
packages.find = {exclude = ["config", "sessions"]}
